metadata/force-app/main/default/objects/Order/fields/OEM_Email__c.field-meta.xml
<CustomField>
    <fullName>OEM_Email__c</fullName>
    <formula>Opportunity.OEM__r.Bill_to_Contact_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OEM Email</label>
    <type>Text</type>
</CustomField>