metadata/force-app/main/default/objects/Order/fields/of_MRR_Products__c.field-meta.xml
<CustomField>
    <fullName>of_MRR_Products__c</fullName>
    <label># of MRR Products</label>
    <summaryFilterItems>
        <field>OrderItem.For_Contract_Renewals_mapped__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>