metadata/force-app/main/default/objects/Order/fields/of_products__c.field-meta.xml
<CustomField>
    <fullName>of_products__c</fullName>
    <label># of products</label>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>