metadata/force-app/main/default/objects/Order/fields/One_off__c.field-meta.xml
<CustomField>
    <fullName>One_off__c</fullName>
    <label>One-off</label>
    <summarizedField>OrderItem.Total_Price__c</summarizedField>
    <summaryFilterItems>
        <field>OrderItem.For_Contract_Renewals_mapped__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>