metadata/force-app/main/default/objects/Order/fields/Opportunity_ID_18_digits__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ID_18_digits__c</fullName>
    <formula>Opportunity.Opportunity_ID_18_digits__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity ID (18 digits)</label>
    <type>Text</type>
</CustomField>