metadata/force-app/main/default/objects/Order/fields/Opportunity_IsActive__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_IsActive__c</fullName>
    <formula>Opportunity.Contract_IsActive__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity IsActive</label>
    <type>Checkbox</type>
</CustomField>