metadata/force-app/main/default/objects/Order/fields/Opportunity_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_PO_Number__c</fullName>
    <description>PO from the opportunity level.</description>
    <formula>Opportunity.PO_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>PO from the opportunity level.</inlineHelpText>
    <label>Opportunity PO Number</label>
    <type>Text</type>
</CustomField>