metadata/force-app/main/default/objects/Order/fields/Opportunity_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Start_Date__c</fullName>
    <formula>Opportunity.Startdate_contract__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Start Date</label>
    <type>Date</type>
</CustomField>