metadata/force-app/main/default/objects/Order/fields/Order_Netsuite_ID__c.field-meta.xml
<CustomField>
    <fullName>Order_Netsuite_ID__c</fullName>
    <description>Sales Order Internal ID in Netsuite. If field is blank, a sales order has not been created in Netsuite.</description>
    <externalId>true</externalId>
    <inlineHelpText>Sales Order Internal ID in Netsuite. If field is blank, a sales order has not been created in Netsuite.</inlineHelpText>
    <label>Order Netsuite ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>