metadata/force-app/main/default/objects/Order/fields/Order_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Order_Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the order has been reviewed and ready to be pushed to NetSuite as an invoice.</description>
    <inlineHelpText>Indicates that the order has been reviewed and details are correct.</inlineHelpText>
    <label>Order Reviewed</label>
    <type>Checkbox</type>
</CustomField>