metadata/force-app/main/default/objects/Order/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <formula>IF(ISPICKVAL(Type, &quot;Pre-Order&quot;), &quot;Pre-Order&quot;, 
  IF(Total_Order_Value__c&lt;0, &quot;Credit Memo&quot;, &quot;Sales Order&quot;)
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Type</label>
    <type>Text</type>
</CustomField>