metadata/force-app/main/default/objects/Order/fields/Original_Invoice_Netsuite_ID__c.field-meta.xml
<CustomField>
    <fullName>Original_Invoice_Netsuite_ID__c</fullName>
    <formula>IF(ISBLANK(OriginalOrder.Id),Original_Order__r.Invoice_Netsuite_ID__c,OriginalOrder.Invoice_Netsuite_ID__c)</formula>
    <label>Original Invoice Netsuite ID</label>
    <type>Text</type>
</CustomField>