metadata/force-app/main/default/objects/Order/fields/Original_Order__c.field-meta.xml
<CustomField>
    <fullName>Original_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders_del</relationshipName>
    <type>Lookup</type>
</CustomField>