metadata/force-app/main/default/objects/Order/fields/Package_Name__c.field-meta.xml
<CustomField>
    <fullName>Package_Name__c</fullName>
    <formula>TEXT(Opportunity.Standard_Package_Name__c)</formula>
    <label>Package Name</label>
    <type>Text</type>
</CustomField>