metadata/force-app/main/default/objects/Order/fields/Payment_Period__c.field-meta.xml
<CustomField>
    <fullName>Payment_Period__c</fullName>
    <description>The Netsuite internal ID of the payment period. Can be found here: 

https://system.eu2.netsuite.com/app/common/otherlists/accountingotherlists.nl?tname=terms&amp;sortcol=&amp;sortdir=ASC&amp;csv=HTML&amp;OfficeXML=F&amp;pdf=&amp;size=1000&amp;showall=F&amp;_eml_nkey_=243375169#</description>
    <formula>CASE(Opportunity.Payment_Period__c,
&quot;Due on receipt&quot;,4,
&quot;15 days&quot;,25,
&quot;30 days&quot;,2,
&quot;45 days&quot;,7,
&quot;60 days&quot;,3,
&quot;75 days&quot;,5,
&quot;90 days&quot;,8,
&quot;120 days&quot;,9,
&quot;150 days&quot;,33,
&quot;180 days&quot;,32,
&quot;30 Days ME&quot;, 29,
&quot;60 Days ME&quot;, 30,
&quot;90 Days ME&quot;, 31,0)</formula>
    <inlineHelpText>The Netsuite internal ID of the payment period.</inlineHelpText>
    <label>Payment Period</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>