metadata/force-app/main/default/objects/Order/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <description>Invoice payment status synced from Netsuite</description>
    <inlineHelpText>Invoice payment status synced from Netsuite</inlineHelpText>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paid In Full</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
                <default>true</default>
                <label>Pending Approval</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Voided</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Fully Applied</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Billed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>