metadata/force-app/main/default/objects/Order/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <formula>CASE(Opportunity.Platform__c, &quot;Bynder&quot;,1,2)</formula>
    <label>Platform</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>