metadata/force-app/main/default/objects/Order/fields/PO_reminder_chatter_sent__c.field-meta.xml
<CustomField>
    <fullName>PO_reminder_chatter_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true when the auto-activation flow sends a chatter message notifying the CSM that the PO number is outstanding.</description>
    <inlineHelpText>Set to true when the auto-activation flow sends a chatter message notifying the CSM that the PO number is outstanding.</inlineHelpText>
    <label>PO reminder chatter sent</label>
    <type>Checkbox</type>
</CustomField>