metadata/force-app/main/default/objects/Order/fields/PO_reminder_message_sent_Date__c.field-meta.xml
<CustomField>
    <fullName>PO_reminder_message_sent_Date__c</fullName>
    <description>System field used in the flow &quot;Order Indexation &amp; Activation&quot; to ensure that chatter messages to CSMs are sent bi-daily.</description>
    <label>PO reminder message sent Date</label>
    <type>Date</type>
</CustomField>