metadata/force-app/main/default/objects/Order/fields/Previous_Indexation_Rate__c.field-meta.xml
<CustomField>
    <fullName>Previous_Indexation_Rate__c</fullName>
    <inlineHelpText>Cumulative indexation rate applied on the customer before indexation is applied on this order.</inlineHelpText>
    <label>Previous Indexation Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>