metadata/force-app/main/default/objects/Order/fields/Sales_Office__c.field-meta.xml
<CustomField>
    <fullName>Sales_Office__c</fullName>
    <formula>TEXT(Opportunity.Sales_Office__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Office</label>
    <type>Text</type>
</CustomField>