metadata/force-app/main/default/objects/Order/fields/Send_invoice_email_automatically__c.field-meta.xml
<CustomField>
    <fullName>Send_invoice_email_automatically__c</fullName>
    <formula>CASE(Account.Send_invoice_email_automatically__c,
&quot;Yes&quot;,&quot;1&quot;,
&quot;No&quot;,&quot;2&quot;,&quot;&quot;)</formula>
    <label>Send invoice email automatically</label>
    <type>Text</type>
</CustomField>