metadata/force-app/main/default/objects/Order/fields/Stop_auto_activation__c.field-meta.xml
<CustomField>
    <fullName>Stop_auto_activation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Prevents the auto activation of the order.</description>
    <inlineHelpText>Prevents the auto activation of the order.</inlineHelpText>
    <label>Stop Auto Activation</label>
    <type>Checkbox</type>
</CustomField>