metadata/force-app/main/default/objects/Order/fields/Subsidiary_Netsuite_Internal_ID__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary_Netsuite_Internal_ID__c</fullName>
    <description>Internal ID for Subsidiary in Netsuite.</description>
    <formula>Account.Subsidiary_lookup__r.Subsidiary_Netsuite_Internal_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Internal ID for Subsidiary in Netsuite.</inlineHelpText>
    <label>Subsidiary Netsuite Internal ID</label>
    <type>Text</type>
</CustomField>