metadata/force-app/main/default/objects/Order/fields/Sum_of_quantities__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_quantities__c</fullName>
    <description>Indicates the quantity of all products. Used for the validation rule to prohibit editing orders that have been reviewed.</description>
    <label>Sum of quantities</label>
    <summarizedField>OrderItem.Quantity</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>