metadata/force-app/main/default/objects/Order/fields/Total_Order_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Order_Value__c</fullName>
    <description>Total value of the order.</description>
    <formula>(MRR__c*Netsuite_Term__c)+One_off__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total value of the order.</inlineHelpText>
    <label>Total Order Value</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>