metadata/force-app/main/default/objects/Order/fields/Waive_Indexation__c.field-meta.xml
<CustomField>
    <fullName>Waive_Indexation__c</fullName>
    <inlineHelpText>Select &apos;Yes&apos; to waive indexation on this order.</inlineHelpText>
    <label>Waive Indexation?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>