metadata/force-app/main/default/objects/Order/fields/Waive_Indexation_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Waive_Indexation_Approval_Status__c</fullName>
    <description>Specifies approval status of waiving indexation on order.</description>
    <inlineHelpText>Specifies approval status of waiving indexation on order.</inlineHelpText>
    <label>Waive Indexation Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Recalled</fullName>
            </value>
            <value>
                <fullName>Approved - Credit Memo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>