metadata/force-app/main/default/objects/Order/fields/Waive_Indexation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Waive_Indexation_Reason__c</fullName>
    <inlineHelpText>Reason for waiving the indexation</inlineHelpText>
    <label>Waive Indexation - Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billing Address</fullName>
            </value>
            <value>
                <fullName>Billing Cycle</fullName>
            </value>
            <value>
                <fullName>Billing Date</fullName>
            </value>
            <value>
                <fullName>Churn Risk</fullName>
            </value>
            <value>
                <fullName>Compensation</fullName>
            </value>
            <value>
                <fullName>Contract Changes</fullName>
            </value>
            <value>
                <fullName>Covid</fullName>
            </value>
            <value>
                <fullName>Customer Churned</fullName>
            </value>
            <value>
                <fullName>Discount In Opportunity Not Applied</fullName>
            </value>
            <value>
                <fullName>Duplicate Invoicing</fullName>
            </value>
            <value>
                <fullName>Financial Distress</fullName>
            </value>
            <value>
                <fullName>Incorrect Bynder Subsidiary</fullName>
            </value>
            <value>
                <fullName>Incorrect Customer Subsidiary</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Product Changes</fullName>
            </value>
            <value>
                <fullName>Renewal Pricing Negotiation</fullName>
            </value>
            <value>
                <fullName>Sales Tax</fullName>
            </value>
            <value>
                <fullName>Split One-Off and Recurring Products</fullName>
            </value>
            <value>
                <fullName>Subscription Term</fullName>
            </value>
            <value>
                <fullName>VAT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>