metadata/force-app/main/default/objects/Order/fields/Waive_Indexation_Reason_Detail__c.field-meta.xml
<CustomField>
    <fullName>Waive_Indexation_Reason_Detail__c</fullName>
    <description>Additional comments for waiving the indexation.</description>
    <label>Waive Indexation Reason Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>