metadata/force-app/main/default/objects/Order/fields/Waive_Indexation_Requestor_Email__c.field-meta.xml
<CustomField>
    <fullName>Waive_Indexation_Requestor_Email__c</fullName>
    <label>Waive Indexation Requestor Email</label>
    <type>Email</type>
</CustomField>