metadata/force-app/main/default/objects/Order/fields/Waived_Indexation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Waived_Indexation_Amount__c</fullName>
    <description>Total Indexation amount waived on this order.</description>
    <inlineHelpText>Total Indexation amount waived on this order.</inlineHelpText>
    <label>Waived Indexation Amount</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>