metadata/force-app/main/default/objects/Order/recordTypes/Pre_order.recordType-meta.xml
<RecordType>
    <fullName>Pre_order</fullName>
    <active>true</active>
    <description>For pre-orders that are created on open opportunities. Won&apos;t be synced to NetSuite.</description>
    <label>Pre-order</label>
</RecordType>