metadata/force-app/main/default/objects/Order/validationRules/Account_ID_required_for_existing_custome.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_ID_required_for_existing_custome</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISBLANK(Account.Netsuite_Internal_ID__c),
Account.Name != &quot;Renegade/Dakine&quot;,
ISPICKVAL(Status,&quot;Activated&quot;),
NOT(OR(
ISPICKVAL(Opportunity.Type,&quot;New Business - Expansion Portal&quot;),
ISPICKVAL(Opportunity.Type,&quot;New Business-Enterprise Cloud&quot;))))</errorConditionFormula>
    <errorMessage>The customer Netsuite ID is missing from the account. This order cannot be activated until the missing ID is entered.</errorMessage>
</ValidationRule>