metadata/force-app/main/default/objects/Order/validationRules/Billing_Period.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Period</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Opportunity.Payment_Period__c,&quot;&quot;),
NOT(Account_Name__c =&quot;Workfront&quot;),
  ISCHANGED(Status),
  ISPICKVAL(Status,&quot;Activated&quot;))</errorConditionFormula>
    <errorMessage>Please enter the payment period on the opportunity level.</errorMessage>
</ValidationRule>