metadata/force-app/main/default/objects/Order/validationRules/Cannot_apply_indexation_on_order.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_apply_indexation_on_order</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Apply_Indexation__c) &amp;&amp;
Apply_Indexation__c &amp;&amp;
(Indexation__c =&quot;Not Applicable&quot; || Indexation__c =&quot;Waived On Account&quot;)</errorConditionFormula>
    <errorMessage>Indexation cannot be applied on this order.</errorMessage>
</ValidationRule>