metadata/force-app/main/default/objects/Order/validationRules/Cannot_create_indexation_credit_memo.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_create_indexation_credit_memo</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISNEW(),
    OR(
        Original_Order__r.Indexation__c != $Label.Apply_or_waive_indexation ,
        AND(TEXT(Original_Order__r.Status) != &quot;Activated&quot;,Original_Order__r.Indexation__c = $Label.Apply_or_waive_indexation)
    ),
    ISPICKVAL(Credit_Memo_Type__c,&quot;Indexation&quot;)
)</errorConditionFormula>
    <errorMessage>Credit memo for indexation cannot be created for the original order invoice period.</errorMessage>
</ValidationRule>