metadata/force-app/main/default/objects/Order/validationRules/Credit_memos_require_approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Credit_memos_require_approval</fullName>
    <active>true</active>
    <description>Please submit this record for approval.</description>
    <errorConditionFormula>AND(Total_Order_Value__c&lt;0,
TEXT(Status) = &quot;Activated&quot;,
ISBLANK(Order_Netsuite_ID__c),
TEXT(Approval_Status__c) !=&quot;Approved&quot;)</errorConditionFormula>
    <errorMessage>The credit memo has not been activated or submitted for approval, please click on the Submit for Approval button to submit/activate the credit memo.</errorMessage>
</ValidationRule>