metadata/force-app/main/default/objects/Order/validationRules/Invoice_Billing_Structure.validationRule-meta.xml
<ValidationRule>
    <fullName>Invoice_Billing_Structure</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(Status),
NOT(ISCHANGED(Order_Netsuite_ID__c)),
ISPICKVAL(Account.Invoice_Billing_Structure__c,&quot;&quot;),
EffectiveDate = Opportunity.Startdate_contract__c)</errorConditionFormula>
    <errorMessage>Please fill out the &apos;Invoice Billing Structure&apos; field on the account level.</errorMessage>
</ValidationRule>