metadata/force-app/main/default/objects/Order/validationRules/Invoice_Delivery_Method.validationRule-meta.xml
<ValidationRule>
    <fullName>Invoice_Delivery_Method</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Account.Invoice_Delivery_Method__c,&quot;&quot;),
  ISCHANGED(Status),
  ISPICKVAL(Status,&quot;Activated&quot;))</errorConditionFormula>
    <errorMessage>Please enter the Invoice Delivery Method on the account level.</errorMessage>
</ValidationRule>