metadata/force-app/main/default/objects/Order/validationRules/Negative_order_requires_description.validationRule-meta.xml
<ValidationRule>
    <fullName>Negative_order_requires_description</fullName>
    <active>true</active>
    <description>Downsell orders require memo</description>
    <errorConditionFormula>AND(Total_Order_Value__c&lt;0,
NOT(ISCHANGED(Netsuite_Term__c)),
NOT(ISCHANGED(Order_Netsuite_ID__c)),
NOT(ISBLANK(Order_Netsuite_ID__c)),
ISBLANK(Description),
NOT(ISPICKVAL(Status,&quot;Description&quot;)))</errorConditionFormula>
    <errorDisplayField>Description</errorDisplayField>
    <errorMessage>Please detail the reason for this credit memo.</errorMessage>
</ValidationRule>