metadata/force-app/main/default/objects/Order/validationRules/Only_One_Activated_Order_Per_Opp_Pending.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_One_Activated_Order_Per_Opp_Pending</fullName>
    <active>true</active>
    <description>BODEV-1813: Only One Activated Order Per Opp Pending</description>
    <errorConditionFormula>AND(
ISCHANGED( Status ), ISPICKVAL(Status,&quot;Activated&quot;), Account.Order_sync_pending__c=TRUE, NOT(CONTAINS(  $User.Id,&quot;005U00000034ZKA&quot;)), NOT( CONTAINS( $User.Id,&quot;0053g000000htF8&quot;)))</errorConditionFormula>
    <errorMessage>There is another order pending to be synced to NetSuite for this account. Please try to activate it again in a few minutes.</errorMessage>
</ValidationRule>