metadata/force-app/main/default/objects/Order/validationRules/Order_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Order_End_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(EndDate),
ISPICKVAL(Status,&quot;Activated&quot;))</errorConditionFormula>
    <errorDisplayField>EndDate</errorDisplayField>
    <errorMessage>Please enter the order end date. For PS this can be the same at the start date.</errorMessage>
</ValidationRule>