metadata/force-app/main/default/objects/Order/validationRules/Original_order_for_indexation_creditmemo.validationRule-meta.xml
<ValidationRule>
    <fullName>Original_order_for_indexation_creditmemo</fullName>
    <active>true</active>
    <description>Original order is required for indexation credit memo</description>
    <errorConditionFormula>Total_Order_Value__c &lt; 0 &amp;&amp;  ISPICKVAL(Credit_Memo_Type__c,&quot;Indexation&quot;) &amp;&amp;  ISBLANK(Original_Order__c)</errorConditionFormula>
    <errorMessage>Please select original order on credit memo for indexation.</errorMessage>
</ValidationRule>