metadata/force-app/main/default/objects/Order/validationRules/Send_invoice_email_automatically.validationRule-meta.xml
<ValidationRule>
    <fullName>Send_invoice_email_automatically</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Account.Send_invoice_email_automatically__c,&quot;&quot;),
ISPICKVAL(Status,&quot;Activated&quot;))</errorConditionFormula>
    <errorMessage>Please fill out the Send invoice email automatically field on the account level.</errorMessage>
</ValidationRule>