metadata/force-app/main/default/objects/Order/validationRules/Tax_issues.validationRule-meta.xml
<ValidationRule>
    <fullName>Tax_issues</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISBLANK(Account.Netsuite_Internal_ID__c),
ISPICKVAL(Status,&quot;Activated&quot;),
OR(
(Account.Subsidiary_lookup__r.Name = &quot;Bynder LLC&quot; &amp;&amp; NOT(ISPICKVAL(Account.BillingCountryCode,&quot;US&quot;))),
(Account.Subsidiary_lookup__r.Name = &quot;Bynder Ltd.&quot; &amp;&amp; NOT(ISPICKVAL(Account.BillingCountryCode,&quot;GB&quot;))),
(Account.Subsidiary_lookup__r.Name = &quot;Bynder Software FZ-LLC&quot; &amp;&amp; NOT(ISPICKVAL(Account.BillingCountryCode,&quot;AE&quot;))),
(Account.Subsidiary_lookup__r.Name = &quot;Bynder B.V.&quot; &amp;&amp; NOT(ISPICKVAL(Account.BillingCountryCode,&quot;NL&quot;)))
))</errorConditionFormula>
    <errorMessage>Tax issues for customers where country doesn&apos;t match subsidiary country. Contact Abaí.</errorMessage>
</ValidationRule>