metadata/force-app/main/default/objects/Order/listViews/AllActivatedOrdersNewBusiness.listView-meta.xml
<ListView>
    <fullName>AllActivatedOrdersNewBusiness</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>Opportunity_Type__c</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>Sales_Office__c</columns>
    <columns>Billing_Country__c</columns>
    <columns>Netsuite_Link__c</columns>
    <columns>ORDERS.ACTIVATED_DATE</columns>
    <columns>ACTIVATEDBY_USER.ALIAS</columns>
    <columns>ORDER.PO_NUMBER</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.STATUS</field>
        <operation>equals</operation>
        <value>Activated</value>
    </filters>
    <filters>
        <field>Opportunity_Type__c</field>
        <operation>contains</operation>
        <value>New Business</value>
    </filters>
    <label>All Activated Orders New Business</label>
</ListView>