metadata/force-app/main/default/objects/Order/listViews/AllADraftUpsellOrders.listView-meta.xml
<ListView>
    <fullName>AllADraftUpsellOrders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>Sales_Office__c</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ORDERS.ACTIVATED_DATE</columns>
    <columns>Opportunity_Type__c</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>Netsuite_Link__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.STATUS_CODE</field>
        <operation>equals</operation>
        <value>D</value>
    </filters>
    <filters>
        <field>Opportunity_Type__c</field>
        <operation>contains</operation>
        <value>Upsell</value>
    </filters>
    <label>All Draft Upsell Orders</label>
</ListView>